# PaperWatch

./: .gitignore  LICENSE  README.md  filters.py  pyproject.toml
config/: config.yaml.example
cron/: run.sh.example
fetchers/: arxiv.py
src/: cli.py  config.py  storage.py  utils.py
