[project]
name = "paperwatch"
version = "0.1.0"
description = "Automated research paper tracker using cron"
authors = [
    {name = "HridayBhuta",email = "bhutahriday@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser (>=6.0.12,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
